fixed z-index issue w/ available_modules fixed PagePropertyNameSpace

--- a/web/css/admin/admin-ui.less
+++ b/web/css/admin/admin-ui.less
@@ -444,6 +444,7 @@ div.container {
 	
 	.available_modules li {
 		background-color: #f2f2f2;
+		z-index: 2;
 	}		
 
 	.filled_modules ol.template-container li,
